Resolve alignment issues with header styles

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -4,7 +4,6 @@
     #282828,
     #1A1A1A
     );
-  height: 54px;
 }
 
 .header a {
@@ -12,41 +11,44 @@
 }
 
 .header-nav {
+  display: flex;
   width: 83%;
   min-width: 750px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .header-logo {
   padding: 15px 20px 5px 20px;
-  margin: 0 20px 0 0;
-  float: left;
+  margin: 0 20px 2px 0;
+  /*display: flex;*/
+  /*float: left;*/
 }
 
 .logo {
-  float: left;
   width: 25px;
   height: 25px;
   border-radius: 50%;
   background-color: #ccc;
   margin: 0 10px 0 0;
+  display: inline;
 }
 
 .header-logo > h1 {
   font-size: 24px;
-  display: inline-block;
+  display: inline;
   font-weight: lighter;
 }
 
 .nav-links {
-  padding: 20px 0 10px 50px;
+  padding: 20px 0 10px 0;
   font-size: 14px;
 }
 
 .nav-links li {
   float: left;
   color: #777;
-  padding: 0 40px 0 0;
+  padding: 5px 40px 0 0;
   /*font-size: 14px;*/
 }
 
@@ -56,7 +58,7 @@
 }
 
 .user-profile-link {
-  float: right;
+  margin-left: auto;
   /*position: rel*/
   display: flex;
   max-height: 40px;
@@ -65,13 +67,14 @@
 
 .user-profile-link > h2 {
   float: left;
+  margin: 20px 0;
   vertical-align: center;
   /*padding: 0px 0 0 20px;*/
 }
 
 .profile-pic {
   word-wrap: break-word;
-  margin: 0 10px 0 0;
+  margin: 6px 10px 0 0;
   float: left;
   width: 40px;
   height: 40px;
