--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -23,7 +23,7 @@ img {
   height: auto;
 }
 
-group:after {
+.group:after {
   content: "";
   display: block;
   clear: both;
